# device-common

./: README.md  pyproject.toml
src/okopilote/devices/common/: abstract.py  boiler_sensor.py  devices.py  mock_sensor.py  ncno_valve.py
