[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "okopilote-devices-common"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "François", email = "francoismdj@gmx.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/okopilote"]

[project.urls]
Documentation = "https://github.com/francoismdj/okopilote/devices/common#readme"
Issues = "https://github.com/francoismdj/okopilote/devices/common/issues"
Source = "https://github.com/francoismdj/okopilote/devices/common"

[tool.hatch.version]
path = "src/okopilote/devices/common/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/okopilote/devices/common tests}"

[tool.coverage.run]
source_pkgs = ["okopilote_devices_common", "tests"]
branch = true
parallel = true
omit = [
  "src/okopilote_devices_common/__about__.py",
]

[tool.coverage.paths]
okopilote_devices_common = ["src/okopilote/devices/common", "*/common/src/okopilote/devices/common"]
tests = ["tests", "*/common/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
